--- a/lognormal_demo.ipynb
+++ b/lognormal_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMupqM0rLLkXKTxJeWRSX8t",
+      "authorship_tag": "ABX9TyNkfH5rlCZboqf57aAv3eVl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,12 +95,13 @@
         "import requests\n",
         "import numpy as np\n",
         "import time\n",
-        "from symbulate import *"
+        "from symbulate import *\n",
+        "from scipy.stats import shapiro"
       ],
       "metadata": {
         "id": "oFlq3eZ9s7Su"
       },
-      "execution_count": 17,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -1000,7 +1001,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The Center for Medicare and Medicaid (CMS) keeps weekly data on nursing homes that treat COVID. From this data, we can find that many variables regarding hospital utilization follow a lognormal distribution, including:\n",
+        "The Center for Medicare and Medicaid (CMS) keeps weekly data on nursing homes that treat COVID. From this data, we can find that many variables regarding hospital utilization appear to follow a lognormal distribution, including:\n",
         "- Weekly Number of Occupied Beds per Hospital\n",
         "- Total Resident COVID Deaths per Hospital\n",
         "\n",
