--- a/index.Rmd
+++ b/index.Rmd
@@ -13,6 +13,8 @@ links:
     url: "https://mshsu.github.io/probasets/earthquakes_demo.html"
   - label: Fireballs
     url: "https://mshsu.github.io/probasets/fireballs_demo.html"
+  - label: LogNormal
+    url: "https://mshsu.github.io/probasets/lognormal_demo.html"
   - label: Population
     url: "https://mshsu.github.io/probasets/population_demo.html"
 output: postcards::jolla
