--- a/index.Rmd
+++ b/index.Rmd
@@ -11,14 +11,20 @@ links:
     url: "https://mshsu.github.io/probasets/crashes_demo.html"
   - label: Earthquakes
     url: "https://mshsu.github.io/probasets/earthquakes_demo.html"
+  - label: Finance
+    url: "https://mshsu.github.io/probasets/finance_demo.html"
   - label: Fireballs
     url: "https://mshsu.github.io/probasets/fireballs_demo.html"
   - label: LogNormal
     url: "https://mshsu.github.io/probasets/lognormal_demo.html"
   - label: Population
     url: "https://mshsu.github.io/probasets/population_demo.html"
+  - label: PPP Loans
+    url: "https://mshsu.github.io/probasets/ppp_demo.html"
 output: postcards::jolla
 ---
 
 Applying probability distributions to real life data.
+
+*Made under the guidance of Dr. Kevin Ross. Not a rigorous analysis (ie. generally no chi-square tests for goodness of fit).*
 
