--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,8 @@ links:
     url: "https://mshsu.github.io/probasets/finance_demo.html"
   - label: Fireballs
     url: "https://mshsu.github.io/probasets/fireballs_demo.html"
+  - label: Fish
+    url: "https://mshsu.github.io/probasets/fish_demo.html"
   - label: LogNormal
     url: "https://mshsu.github.io/probasets/lognormal_demo.html"
   - label: Population
