--- a/notebooks/actions_test.ipynb
+++ b/notebooks/actions_test.ipynb
@@ -1496,7 +1496,12 @@
       ],
       "source": [
         "# Get frequency of appropriate quakes by date\n",
-        "df_counts = df_mag5[\"date\"].value_counts().to_frame().reset_index().rename(columns={ \"date\": \"freq\", \"index\": \"date\"}).sort_values(by=\"date\", ignore_index=True)\n",
+        "df_counts = df_mag5[\"date\"]\n",
+        "df_counts = df_counts.value_counts()\n",
+        "df_counts = df_counts.to_frame()\n",
+        "df_counts = df_counts.reset_index()\n",
+        "df_counts = df_counts.rename(columns={ \"date\": \"freq\", \"index\": \"date\"})\n",
+        "df_counts = df_counts.sort_values(by=\"date\", ignore_index=True)\n",
         "\n",
         "# However, the df_counts we just generated doesn't contain days with 0 quakes.\n",
         "# We need to fix this by generating rows for dates with 0 quakes.\n",
