--- a/notebooks/actions_test.ipynb
+++ b/notebooks/actions_test.ipynb
@@ -1240,13 +1240,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "          date  freq\n",
+              "         index  date\n",
               "0   2023-04-22     4\n",
               "1   2023-04-23     0\n",
               "2   2023-04-24     3\n",
@@ -1279,7 +1279,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e43c982b-4b34-4178-b251-601e16c15fbc\">\n",
+              "  <div id=\"df-59fb90ca-1aaa-4c8b-bec5-36b486d37aa4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1299,8 +1299,8 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>index</th>\n",
               "      <th>date</th>\n",
-              "      <th>freq</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -1452,7 +1452,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e43c982b-4b34-4178-b251-601e16c15fbc')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-59fb90ca-1aaa-4c8b-bec5-36b486d37aa4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1503,12 +1503,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e43c982b-4b34-4178-b251-601e16c15fbc button.colab-df-convert');\n",
+              "          document.querySelector('#df-59fb90ca-1aaa-4c8b-bec5-36b486d37aa4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e43c982b-4b34-4178-b251-601e16c15fbc');\n",
+              "          const element = document.querySelector('#df-59fb90ca-1aaa-4c8b-bec5-36b486d37aa4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1531,7 +1531,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 20
         }
       ],
       "source": [
@@ -1540,29 +1540,29 @@
         "df_counts = df_counts.value_counts()\n",
         "df_counts = df_counts.to_frame()\n",
         "df_counts = df_counts.reset_index()\n",
-        "df_counts = df_counts.rename(columns={ \"date\": \"freq\", \"index\": \"date\"})\n",
+        "# df_counts = df_counts.rename(columns={ \"date\": \"freq\", \"index\": \"date\"})\n",
         "# df_counts = df_counts.sort_values(by=\"date\", ignore_index=True)\n",
         "\n",
         "# However, the df_counts we just generated doesn't contain days with 0 quakes.\n",
         "# We need to fix this by generating rows for dates with 0 quakes.\n",
         "# First, let's find the start and end dates.\n",
-        "start_date = df_counts['date'].min()\n",
-        "end_date = df_counts['date'].max()\n",
+        "start_date = df_counts['index'].min()\n",
+        "end_date = df_counts['index'].max()\n",
         "\n",
         "# Change the datatype of existing date data to string (for better merging)\n",
-        "df_counts['date'] = df_counts['date'].astype(str)\n",
+        "df_counts['index'] = df_counts['index'].astype(str)\n",
         "# Here we generate a dataframe with all dates\n",
-        "all_dates = pd.DataFrame(pd.date_range(start_date, end_date - pd.Timedelta(days = 1), freq='d')).rename(columns={0: 'date'}).astype(str)\n",
+        "all_dates = pd.DataFrame(pd.date_range(start_date, end_date - pd.Timedelta(days = 1), freq='d')).rename(columns={0: 'index'}).astype(str)\n",
         "# Here we merge the df_counts with the table with all dates\n",
         "# Then we fill in 0s for dates with no quakes\n",
-        "df_counts = pd.merge(how='left', left=all_dates, right=df_counts, on='date').fillna(0)\n",
-        "df_counts['freq'] = df_counts['freq'].astype(int)\n",
+        "df_counts = pd.merge(how='left', left=all_dates, right=df_counts, on='index').fillna(0)\n",
+        "df_counts['date'] = df_counts['date'].astype(int)\n",
         "\n",
         "df_counts"
       ],
       "metadata": {
         "id": "rUYZLFJbFoS5",
-        "outputId": "0486a986-6788-40c4-d6fc-3364f5f60cb3",
+        "outputId": "13dab8fe-0d47-4c6f-f666-df3b25eca9cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 958
@@ -1571,7 +1571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1586,7 +1586,7 @@
       ],
       "source": [
         "# This makes it so our histogram bar centers line up with the dots on the theoretical distribution\n",
-        "bin_edges=[i+0.5 for i in list(range(min(df_counts[\"freq\"])-1, max(df_counts[\"freq\"])+1, 1))]\n",
+        "bin_edges=[i+0.5 for i in list(range(min(df_counts[\"date\"])-1, max(df_counts[\"date\"])+1, 1))]\n",
         "\n",
         "# This is the number of days in our timeframe\n",
         "t=1\n",
@@ -1594,7 +1594,7 @@
         "mu=lambd*t\n",
         "\n",
         "# Plotting the observed data\n",
-        "df_counts[\"freq\"].hist(density=True, bins=bin_edges, rwidth=0.3, grid=False)\n",
+        "df_counts[\"date\"].hist(density=True, bins=bin_edges, rwidth=0.3, grid=False)\n",
         "# Plotting the theoretical distribution\n",
         "Poisson(mu).plot()\n",
         "\n",
@@ -1602,12 +1602,12 @@
         "plt.ylabel(ylabel=\"Density\")\n",
         "plt.xlabel(xlabel=\"# of Quakes on Given Day\")\n",
         "plt.title(label=\"Distribution of # of 5.0+ Magnitude Earthquakes on a Given Day\")\n",
-        "plt.xlim((0,max(df_counts[\"freq\"])+1))\n",
+        "plt.xlim((0,max(df_counts[\"date\"])+1))\n",
         "plt.show()"
       ],
       "metadata": {
         "id": "gHfH1xMFFoS5",
-        "outputId": "22b443a7-9747-483b-87c4-889851cea26a",
+        "outputId": "5f9057d2-56b7-4468-fd18-30784b042139",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
