--- a/notebooks/actions_test.ipynb
+++ b/notebooks/actions_test.ipynb
@@ -1536,29 +1536,29 @@
       ],
       "source": [
         "# Get frequency of appropriate quakes by date\n",
-        "df_counts = df_mag5[\"date\"]\n",
-        "df_counts = df_counts.value_counts()\n",
-        "df_counts = df_counts.to_frame()\n",
-        "df_counts = df_counts.reset_index()\n",
+        "# df_counts = df_mag5[\"date\"]\n",
+        "# df_counts = df_counts.value_counts()\n",
+        "# df_counts = df_counts.to_frame()\n",
+        "# df_counts = df_counts.reset_index()\n",
         "# df_counts = df_counts.rename(columns={ \"date\": \"freq\", \"index\": \"date\"})\n",
         "# df_counts = df_counts.sort_values(by=\"date\", ignore_index=True)\n",
         "\n",
         "# However, the df_counts we just generated doesn't contain days with 0 quakes.\n",
         "# We need to fix this by generating rows for dates with 0 quakes.\n",
         "# First, let's find the start and end dates.\n",
-        "start_date = df_counts['index'].min()\n",
-        "end_date = df_counts['index'].max()\n",
+        "# start_date = df_counts['index'].min()\n",
+        "# end_date = df_counts['index'].max()\n",
         "\n",
         "# Change the datatype of existing date data to string (for better merging)\n",
-        "df_counts['index'] = df_counts['index'].astype(str)\n",
+        "# df_counts['index'] = df_counts['index'].astype(str)\n",
         "# Here we generate a dataframe with all dates\n",
-        "all_dates = pd.DataFrame(pd.date_range(start_date, end_date - pd.Timedelta(days = 1), freq='d')).rename(columns={0: 'index'}).astype(str)\n",
+        "# all_dates = pd.DataFrame(pd.date_range(start_date, end_date - pd.Timedelta(days = 1), freq='d')).rename(columns={0: 'index'}).astype(str)\n",
         "# Here we merge the df_counts with the table with all dates\n",
         "# Then we fill in 0s for dates with no quakes\n",
-        "df_counts = pd.merge(how='left', left=all_dates, right=df_counts, on='index').fillna(0)\n",
-        "df_counts['date'] = df_counts['date'].astype(int)\n",
+        "# df_counts = pd.merge(how='left', left=all_dates, right=df_counts, on='index').fillna(0)\n",
+        "# df_counts['date'] = df_counts['date'].astype(int)\n",
         "\n",
-        "df_counts"
+        "# df_counts"
       ],
       "metadata": {
         "id": "rUYZLFJbFoS5",
@@ -1586,24 +1586,24 @@
       ],
       "source": [
         "# This makes it so our histogram bar centers line up with the dots on the theoretical distribution\n",
-        "bin_edges=[i+0.5 for i in list(range(min(df_counts[\"date\"])-1, max(df_counts[\"date\"])+1, 1))]\n",
+        "# bin_edges=[i+0.5 for i in list(range(min(df_counts[\"date\"])-1, max(df_counts[\"date\"])+1, 1))]\n",
         "\n",
         "# This is the number of days in our timeframe\n",
-        "t=1\n",
+        "# t=1\n",
         "# This is our Poisson parameter mu\n",
-        "mu=lambd*t\n",
+        "# mu=lambd*t\n",
         "\n",
         "# Plotting the observed data\n",
-        "df_counts[\"date\"].hist(density=True, bins=bin_edges, rwidth=0.3, grid=False)\n",
+        "# df_counts[\"date\"].hist(density=True, bins=bin_edges, rwidth=0.3, grid=False)\n",
         "# Plotting the theoretical distribution\n",
-        "Poisson(mu).plot()\n",
+        "# Poisson(mu).plot()\n",
         "\n",
         "# Cosmetic stuff\n",
-        "plt.ylabel(ylabel=\"Density\")\n",
-        "plt.xlabel(xlabel=\"# of Quakes on Given Day\")\n",
-        "plt.title(label=\"Distribution of # of 5.0+ Magnitude Earthquakes on a Given Day\")\n",
-        "plt.xlim((0,max(df_counts[\"date\"])+1))\n",
-        "plt.show()"
+        "# plt.ylabel(ylabel=\"Density\")\n",
+        "# plt.xlabel(xlabel=\"# of Quakes on Given Day\")\n",
+        "# plt.title(label=\"Distribution of # of 5.0+ Magnitude Earthquakes on a Given Day\")\n",
+        "# plt.xlim((0,max(df_counts[\"date\"])+1))\n",
+        "# plt.show()"
       ],
       "metadata": {
         "id": "gHfH1xMFFoS5",
