--- a/notebooks/actions_test.ipynb
+++ b/notebooks/actions_test.ipynb
@@ -39,21 +39,19 @@
       ],
       "metadata": {
         "id": "112giUM7F0eY",
-        "outputId": "6ee1a534-2ef1-4c3d-9bc5-a212c87de480",
+        "outputId": "c0c31eea-9386-4c22-c5fd-9f5c24891d42",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting symbulate\n",
-            "  Downloading symbulate-0.5.7-py3-none-any.whl (44 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/44.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.9/44.9 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from symbulate) (1.22.4)\n",
+            "Requirement already satisfied: symbulate in /usr/local/lib/python3.10/dist-packages (0.5.7)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from symbulate) (1.22.4)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from symbulate) (1.10.1)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (from symbulate) (3.7.1)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->symbulate) (1.1.0)\n",
@@ -64,16 +62,14 @@
             "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->symbulate) (8.4.0)\n",
             "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->symbulate) (3.1.0)\n",
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib->symbulate) (2.8.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib->symbulate) (1.16.0)\n",
-            "Installing collected packages: symbulate\n",
-            "Successfully installed symbulate-0.5.7\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib->symbulate) (1.16.0)\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 23,
       "metadata": {
         "collapsed": true,
         "id": "P39rSeZDFoSx"
@@ -88,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 24,
       "outputs": [],
       "source": [
         "warnings.filterwarnings(\"ignore\")"
@@ -109,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -142,11 +138,11 @@
               "478   23.0   67.0   5.197  0.74  ...  2023-07-01T01:52:51.040Z   \n",
               "\n",
               "                                       place        type horizontalError  \\\n",
-              "0           southeast of the Loyalty Islands  earthquake            6.93   \n",
+              "0        245 km ESE of Tadine, New Caledonia  earthquake            6.93   \n",
               "1              South Sandwich Islands region  earthquake            9.32   \n",
               "2    32 km WSW of Kandrian, Papua New Guinea  earthquake            9.78   \n",
-              "3                         Samar, Philippines  earthquake            9.14   \n",
-              "4      99 km ENE of Kinablangan, Philippines  earthquake            8.75   \n",
+              "3             16 km SW of Cabay, Philippines  earthquake            9.14   \n",
+              "4                  Philippine Islands region  earthquake            8.75   \n",
               "..                                       ...         ...             ...   \n",
               "474                south of the Fiji Islands  earthquake           15.43   \n",
               "475                south of the Fiji Islands  earthquake           12.42   \n",
@@ -172,7 +168,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-9d09f1b1-61c2-4a53-8f63-64b0ba646f6d\">\n",
+              "  <div id=\"df-8e6aee11-1176-4659-bfe0-3cb8b6ce7c0f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -230,7 +226,7 @@
               "      <td>0.69</td>\n",
               "      <td>...</td>\n",
               "      <td>2023-07-10T17:54:39.040Z</td>\n",
-              "      <td>southeast of the Loyalty Islands</td>\n",
+              "      <td>245 km ESE of Tadine, New Caledonia</td>\n",
               "      <td>earthquake</td>\n",
               "      <td>6.93</td>\n",
               "      <td>1.732</td>\n",
@@ -302,7 +298,7 @@
               "      <td>0.73</td>\n",
               "      <td>...</td>\n",
               "      <td>2023-07-10T14:11:41.946Z</td>\n",
-              "      <td>Samar, Philippines</td>\n",
+              "      <td>16 km SW of Cabay, Philippines</td>\n",
               "      <td>earthquake</td>\n",
               "      <td>9.14</td>\n",
               "      <td>2.479</td>\n",
@@ -326,7 +322,7 @@
               "      <td>0.81</td>\n",
               "      <td>...</td>\n",
               "      <td>2023-07-10T13:38:14.042Z</td>\n",
-              "      <td>99 km ENE of Kinablangan, Philippines</td>\n",
+              "      <td>Philippine Islands region</td>\n",
               "      <td>earthquake</td>\n",
               "      <td>8.75</td>\n",
               "      <td>1.869</td>\n",
@@ -484,7 +480,7 @@
               "</table>\n",
               "<p>479 rows × 22 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9d09f1b1-61c2-4a53-8f63-64b0ba646f6d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8e6aee11-1176-4659-bfe0-3cb8b6ce7c0f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -497,8 +493,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-820c01cf-cba5-4ee5-b80d-037a77710f44\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-820c01cf-cba5-4ee5-b80d-037a77710f44')\"\n",
+              "    <div id=\"df-1a70c64f-7982-48fd-90ba-f23673dc11be\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1a70c64f-7982-48fd-90ba-f23673dc11be')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -555,7 +551,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-820c01cf-cba5-4ee5-b80d-037a77710f44 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-1a70c64f-7982-48fd-90ba-f23673dc11be button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -602,12 +598,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9d09f1b1-61c2-4a53-8f63-64b0ba646f6d button.colab-df-convert');\n",
+              "          document.querySelector('#df-8e6aee11-1176-4659-bfe0-3cb8b6ce7c0f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9d09f1b1-61c2-4a53-8f63-64b0ba646f6d');\n",
+              "          const element = document.querySelector('#df-8e6aee11-1176-4659-bfe0-3cb8b6ce7c0f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -629,7 +625,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 25
         }
       ],
       "source": [
@@ -639,10 +635,10 @@
       ],
       "metadata": {
         "id": "s0knryhlFoS0",
-        "outputId": "b5f34962-1931-43c8-d8fa-32bb2eb5aa1a",
+        "outputId": "c95db741-ef32-4cef-e802-df7384bb6a15",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 834
+          "height": 973
         }
       }
     },
@@ -657,7 +653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -709,7 +705,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-9031e41d-aa58-4f7c-b13a-82d074da9ad7\">\n",
+              "  <div id=\"df-c65f4700-b279-4d7d-823b-111fc34f6f7f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1068,7 +1064,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9031e41d-aa58-4f7c-b13a-82d074da9ad7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c65f4700-b279-4d7d-823b-111fc34f6f7f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1081,8 +1077,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-296c83d0-7ab6-44f9-9990-067f291cdee3\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-296c83d0-7ab6-44f9-9990-067f291cdee3')\"\n",
+              "    <div id=\"df-450740f8-46e1-4c08-870d-e2ea81171dc3\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-450740f8-46e1-4c08-870d-e2ea81171dc3')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1139,7 +1135,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-296c83d0-7ab6-44f9-9990-067f291cdee3 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-450740f8-46e1-4c08-870d-e2ea81171dc3 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -1186,12 +1182,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9031e41d-aa58-4f7c-b13a-82d074da9ad7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c65f4700-b279-4d7d-823b-111fc34f6f7f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9031e41d-aa58-4f7c-b13a-82d074da9ad7');\n",
+              "          const element = document.querySelector('#df-c65f4700-b279-4d7d-823b-111fc34f6f7f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1213,7 +1209,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 26
         }
       ],
       "source": [
@@ -1238,7 +1234,7 @@
       ],
       "metadata": {
         "id": "yXCYFyCGFoS1",
-        "outputId": "b38b589e-16f4-4de1-ed29-37815c6f9cb6",
+        "outputId": "6298a23c-6e68-4b4e-f1b2-7422f509c2ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1257,7 +1253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1277,7 +1273,7 @@
       ],
       "metadata": {
         "id": "Q_uNmbb8FoS3",
-        "outputId": "56fc10b4-483a-4f0d-e691-69b5285edda7",
+        "outputId": "b35e4f7d-ba60-4f5d-e433-d8459b6c607e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1295,7 +1291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1327,7 +1323,7 @@
       ],
       "metadata": {
         "id": "KV4eXgfxFoS4",
-        "outputId": "8aa7d3a9-f1a8-4f38-85ca-675760580261",
+        "outputId": "52489b38-0e60-4706-ba21-0e221247b0bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 571
@@ -1346,7 +1342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1385,7 +1381,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-bebdda7b-a57d-4a07-8b40-0bb2aa3eeaef\">\n",
+              "  <div id=\"df-ae89d9a3-88f6-4afe-9973-dec6139b78e2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1553,7 +1549,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bebdda7b-a57d-4a07-8b40-0bb2aa3eeaef')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ae89d9a3-88f6-4afe-9973-dec6139b78e2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1566,8 +1562,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-673cea24-7ead-45c9-accc-99ad16f17327\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-673cea24-7ead-45c9-accc-99ad16f17327')\"\n",
+              "    <div id=\"df-6f0f25a0-1332-476c-b294-a3807dc8ba2d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6f0f25a0-1332-476c-b294-a3807dc8ba2d')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1624,7 +1620,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-673cea24-7ead-45c9-accc-99ad16f17327 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-6f0f25a0-1332-476c-b294-a3807dc8ba2d button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -1671,12 +1667,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-bebdda7b-a57d-4a07-8b40-0bb2aa3eeaef button.colab-df-convert');\n",
+              "          document.querySelector('#df-ae89d9a3-88f6-4afe-9973-dec6139b78e2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-bebdda7b-a57d-4a07-8b40-0bb2aa3eeaef');\n",
+              "          const element = document.querySelector('#df-ae89d9a3-88f6-4afe-9973-dec6139b78e2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1698,7 +1694,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 31
         }
       ],
       "source": [
@@ -1708,7 +1704,7 @@
         "df_counts = df_counts.to_frame()\n",
         "df_counts = df_counts.reset_index()\n",
         "df_counts = df_counts.rename(columns={ \"date\": \"freq\", \"index\": \"date\"})\n",
-        "df_counts = df_counts.sort_values(by=\"date\", ignore_index=True)\n",
+        "# df_counts = df_counts.sort_values(by=\"date\", ignore_index=True)\n",
         "\n",
         "# However, the df_counts we just generated doesn't contain days with 0 quakes.\n",
         "# We need to fix this by generating rows for dates with 0 quakes.\n",
@@ -1729,7 +1725,7 @@
       ],
       "metadata": {
         "id": "rUYZLFJbFoS5",
-        "outputId": "c1be2c8a-f522-4e86-e888-45816fb3e995",
+        "outputId": "5ae149ba-1971-4d7b-f311-cdcda16ebf45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 927
@@ -1738,7 +1734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1774,7 +1770,7 @@
       ],
       "metadata": {
         "id": "gHfH1xMFFoS5",
-        "outputId": "e9d9e8ea-9740-4ff7-f48d-438f9bf6270e",
+        "outputId": "1672b0fc-2444-4699-e2f3-01abf3b2cc6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 460
